--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,11 +11,10 @@
         align-items: center;
     }
     &_icon {
-        background-color: rgb(141, 230, 157);
         flex: 1;
         justify-content: center;
     }
-    &_setting {
+    &_actions {
         background-color: rgb(181, 141, 230);
         justify-content: flex-end;
     }
