--- a/src/components/CurrencySelector/CurrencySelector.scss
+++ b/src/components/CurrencySelector/CurrencySelector.scss
@@ -14,11 +14,15 @@
 
     &_menu {
         position: absolute;
+        display: none;
         top: 30px;
         padding: 15px 0;
         left: -15px;
         width: 114px;
         box-shadow: 0px 4px 35px 0px #A8ACB030;
+        &-show {
+            display: block;
+        }
         &_item {
             font-size: 18px;
             font-weight: 500;
