--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
+body, h1, h2, h3, h4 {
   margin: 0;
+  padding: 0;
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
