add currency dependency

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body, h1, h2, h3, h4 {
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
