--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,27 +1,35 @@
 .product {
     display: flex;
+    box-sizing: border-box;
     width: 386px;
     height: 444px;
     flex-direction: column;
     justify-content: space-between;
-    border: 1px solid black;
+    // border: 1px solid black;
     margin-bottom: 103px;
-    padding: 16px;
+    padding: 14px;
 
     &_img {
         width: 356px;
         height: 338px;
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
     }
 
     &_info {
+        height: 58px;
+        font-size: 18px;
+        line-height: 29px;
+        letter-spacing: 0px;
+        text-align: left;
+
         &_name {
-            font-size: 18px;
             font-weight: 300;
-            line-height: 29px;
-            letter-spacing: 0px;
-            text-align: left;
+        }
+
+        &_price {
+            font-weight: 500;
         }
     }
 }
