--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,20 +1,28 @@
-.product {
+.product,
+.product-out-of-stock {
+    position: relative;
     display: flex;
     box-sizing: border-box;
     width: 386px;
     height: 444px;
     flex-direction: column;
     justify-content: space-between;
-    // border: 1px solid black;
     margin-bottom: 103px;
     padding: 14px;
 
     &_img {
         width: 356px;
         height: 338px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+    }
+
+    &_add-to-cart {
+        display: none;
     }
 
     &_info {
@@ -31,5 +39,43 @@
         &_price {
             font-weight: 500;
         }
+    }
+}
+
+.product:hover {
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+
+    .product_add-to-cart {
+        display: flex;
+        cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        height: 52px;
+        width: 52px;
+        left: 310px;
+        top: 324px;
+        border-radius: 0px;
+        box-shadow: 0px 4px 11px 0px #1D1F221A;
+        background-color: #5ECE7B;
+        border-radius: 50px;
+    }
+}
+
+.product-out-of-stock {
+
+    .product_img,
+    .product_info {
+        opacity: 0.5;
+    }
+
+    &_label {
+        position: absolute;
+        font-family: Raleway;
+        font-size: 24px;
+        font-weight: 400;
+        color: #868080;
+        left: 100px;
+        top: 150px;
     }
 }
