--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -63,7 +63,6 @@
 }
 
 .product-out-of-stock {
-
     .product_img,
     .product_info {
         opacity: 0.5;
@@ -78,4 +77,8 @@
         left: 100px;
         top: 150px;
     }
+}
+
+.product-out-of-stock:hover {
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
 }
