--- a/src/pages/ProductPage/ProductPage.scss
+++ b/src/pages/ProductPage/ProductPage.scss
@@ -1,13 +1,48 @@
 .product-page {
     display: flex;
+    justify-content: space-between;
     margin-top: 70px;
+
     &_gallery {
         width: 60%;
         min-height: 511px;
     }
 
     &_info {
-        background-color: rgba(0, 0, 255, 0.522);
         width: 40%;
+
+        &-inner {
+            width: 292px;
+        }
+
+        &_name {
+            font-family: Raleway;
+            font-size: 30px;
+            font-weight: 600;
+            line-height: 50px;
+            letter-spacing: 0em;
+            text-align: left;
+        }
+
+        &_add-to-cart {
+            height: 52px;
+            width: 100%;
+            background: #5ECE7B;
+            border: 0px;
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 19px;
+            text-align: center;
+            color: #FFFFFF;
+        }
+
+        &_description {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 159.96%;
+        }
     }
 }
