--- a/src/components/ColorSelector/ColorSelector.scss
+++ b/src/components/ColorSelector/ColorSelector.scss
@@ -1,17 +1,17 @@
-.color-selector {
-    display: flex;
-    &_item {
-        box-sizing: border-box;
-        padding: 1px;
-        margin-right: 10px;
-        border: 1px solid #5ECE7B;
-        &-active {
-            border: 2px solid #5ECE7B;
-            padding: 0;
-        }
-        div {
-            width: 30px;
-            height: 30px;
-        }
+.color-selector-item {
+    box-sizing: border-box;
+    padding: 1px;
+    margin-right: 10px;
+    border: 1px solid #5ECE7B;
+
+    &-active {
+        border: 2px solid #5ECE7B;
+        padding: 0;
     }
+
+    div {
+        width: 30px;
+        height: 30px;
+    }
+
 }
