--- a/src/components/ColorSelector/ColorSelector.scss
+++ b/src/components/ColorSelector/ColorSelector.scss
@@ -1,17 +1,20 @@
 .color-selector-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
-    padding: 1px;
-    margin-right: 10px;
-    border: 1px solid #5ECE7B;
+    width: 34px;
+    height: 34px;
 
     &-active {
-        border: 2px solid #5ECE7B;
-        padding: 0;
+        border: 1px solid #5ECE7B;
     }
 
     div {
-        width: 30px;
-        height: 30px;
+        width: 100%;
+        height: 100%;
+        width: 31px;
+        height: 31px;
     }
 
 }
